--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "meatspace-chat",
-  "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/meatspaces/meatspace-chat.git"
-  },
-  "private": true,
-  "engines": {
-    "node": ">= 0.10.x",
-    "npm": ">= 1.3.x"
-  },
-  "scripts": {
-    "build": "grunt",
-    "test": "grunt travis",
-    "start": "nodemon app.js"
-  },
-  "dependencies": {
-    "connect": "~2.14.3",
-    "express": "~3.5.1",
-    "jade": "^1.5.0",
-    "nconf": "~0.6.7",
-    "meatspace-publico": "~0.0.7",
-    "gravatar": "~1.0.6",
-    "socket.io": "~0.9.16",
-    "level": "~0.18.0",
-    "i18next": "~1.7.1",
-    "zmq": "^2.7.0",
-    "passport": "~0.2.0",
-    "passport-twitter": "~1.0.2",
-    "connect-redis": "~1.4.0",
-    "redis": "^0.11.0"
-  },
-  "devDependencies": {
-    "grunt": "^0.4.2",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-requirejs": "^0.4.4",
-    "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-nodeunit": "^0.4.1",
-    "grunt-contrib-jshint": "^0.10.0",
-    "amdefine": "^0.1.0",
-    "nodemon": "^1.2.1",
-    "bower": "^1.3.1",
-    "grunt-contrib-watch": "^0.6.1"
-  }
+    "dependencies": {
+        "connect": "~2.14.3",
+        "connect-redis": "~1.4.0",
+        "express": "~3.5.1",
+        "gravatar": "~1.0.6",
+        "i18next": "~1.7.1",
+        "jade": "^1.5.0",
+        "level": "~0.18.0",
+        "meatspace-publico": "~1.0.0",
+        "nconf": "~0.6.7",
+        "passport": "~0.2.0",
+        "passport-twitter": "~1.0.2",
+        "redis": "^0.11.0",
+        "socket.io": "~0.9.16",
+        "zmq": "^2.7.0"
+    },
+    "devDependencies": {
+        "amdefine": "^0.1.0",
+        "bower": "^1.3.1",
+        "grunt": "^0.4.2",
+        "grunt-contrib-concat": "^0.5.0",
+        "grunt-contrib-cssmin": "^0.10.0",
+        "grunt-contrib-jshint": "^0.10.0",
+        "grunt-contrib-nodeunit": "^0.4.1",
+        "grunt-contrib-requirejs": "^0.4.4",
+        "grunt-contrib-uglify": "^0.5.1",
+        "grunt-contrib-watch": "^0.6.1",
+        "nodemon": "^1.2.1"
+    },
+    "engines": {
+        "node": ">= 0.10.x",
+        "npm": ">= 1.3.x"
+    },
+    "name": "meatspace-chat",
+    "private": true,
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/meatspaces/meatspace-chat.git"
+    },
+    "scripts": {
+        "build": "grunt",
+        "start": "nodemon app.js",
+        "test": "grunt travis"
+    },
+    "version": "1.0.0"
 }
